wprowadzenie do jacoco i sonarcube