@@ -1,15 +1,19 @@
 package pl.coderslab.week2.assertj;
 
+import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TaskService {
-    private List<Task> tasks = new ArrayList<>();
+    private final List<Task> tasks = new ArrayList<>();
 
 
     public Task createTask(Long id, String title, String description, Status status) {
+        if(title == null || title.isEmpty()){
+            throw new IllegalArgumentException("Title cannot be null or empty");
+        }
         Task task = new Task(id, title, description, status);
+        task.setCreateDate(LocalDate.now());
         tasks.add(task);
         return task;
     }
@@ -35,6 +39,16 @@ public class TaskService {
         return tasks.stream()
                 .filter(t -> title == null || t.getTitle().contains(title))
                 .filter(t -> status == null || t.getStatus().equals(status))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<Task> searchTasksByDate(LocalDate date){
+        return tasks.stream()
+                .filter(d -> d.getCreateDate().equals(date))
+                .toList();
+    }
+
+    public List<Task> getTasks(){
+        return tasks;
     }
 }
